k8s/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: req-nlp-web
  labels:
    app: req-nlp-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: req-nlp-web
  template:
    metadata:
      labels:
        app: req-nlp-web
    spec:
      containers:
      - name: req-nlp-web
        image: gabiperez/req-nlp-app:latest   # Cambia esto
        command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
        ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: req-nlp-web-service
spec:
  selector:
    app: req-nlp-web
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
