k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: toolkit
spec:
  to:
    kind: Service
    name: req-nlp-web-service
  port:
    targetPort: 8000
  tls:
    termination: edge
